# audit-viewer

./: Makefile  README.md
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  audit-viewer.desktop.in  audit-viewer.xml.in  configure  configure.ac
src/admin/: audit-viewer-server.console.in
src/configs/Overviews/: Todays_Events.audit-viewer  Yesterdays_Events.audit-viewer
src/configs/Selected_Events/: AVC_Messages.audit-viewer  Event_Overview.audit-viewer  Executable_File_Events.audit-viewer  File_Events.audit-viewer  Host_Events.audit-viewer  Login_Attempts.audit-viewer  PID_Events.audit-viewer  System_Call_Events.audit-viewer  Terminal_Events.audit-viewer  User_Events.audit-viewer
src/configs/Summary_Reports/: Event_Summary.audit-viewer  Executable_File_Summary.audit-viewer  File_Summary.audit-viewer  Host_Summary.audit-viewer  PID_Summary.audit-viewer  System_Call_Summary.audit-viewer  Terminal_Summary.audit-viewer  User_Summary.audit-viewer
src/doc/: audit-viewer.8.in
src/po/: LINGUAS  Makevars  POTFILES.in  ca.po  cs.po  de.po  el.po  es.po  it.po  ja.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sr.po  sr@latin.po  zh_CN.po
src/src/: audit-viewer.glade  audit-viewer.in  client.py  config.h.in  dialog_base.py  event_dialog.py  event_source.py  filters.py  format_versions.py  list_properties.py  list_tab.py  lists.py  main.py  main_window.py  optparse_strings.py  report_properties.py  report_tab.py  save_extra.py  search_entry.py  server.c  server.h  settings.py.in  source_dialog.py  statistic.py  tab.py  tab_properties.py  util.py
